fixed empty todo list not showing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,8 +22,10 @@
   padding: 1em;
 }
 .todo-container{
-  width: 600px;
-  background-color: rgb(99, 165, 38);
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  background-color: rgb(0, 0, 0);
 }
 .btn-container{
   display: flex;
